Fix warning when running asciidoctor tasks
(with this change, Java 9+ is required to build, see firebird-documentation repo for a way to preserve Java 8 compatibility if needed)